--- a/index.html
+++ b/index.html
@@ -51,7 +51,48 @@
                     <p class="videodet">
                         Artist: Megumi Han<br>
                         Released: 2017<br>
-                        Album: Ultraman Geed Character Song
+                        Album: Ultraman Geed Character Song<br><br>
+                        Japanese Lyric :<br>
+                        いつでもいっしょにいてくれるキミのため<br>
+なにができるか かんがえちゅうおひるねグウ!<br>
+ふたりで 虹のジェットコースター<br>
+きっととおくまで行けちゃうよ<br>
+南の海でイルカとジャンプ<br>
+空飛ぶじゅうたんはオーロラ<br>
+パ!ビ!プ!ペガ! って しんこきゅう<br>
+ほらちょっぴり ゆうきがわくよ<br>
+あれこれ キミとだったらかなうかも<br>
+やりたいことがあふれてくるよ<br>
+パ!ビ!プ!ペガ! ってあいことば<br>
+呼んでくれるだけではずむ<br>
+だれより そばにいるよ キミだけの<br>
+おくびょうじるしのおうえんだんだよ<br><br>
+とってもやさしいキミの目のおくにある<br>
+すごいチカラをそうぞうしたらおなかがグウ!<br>
+いっぱいのお花とまんかいの笑顔で<br>
+地球をかざってみんなハッピー<br>
+月にこしかけ 花火を見よう<br>
+こぼれた星でキャッチボール<br>
+パピプ!ペガ!ってがんばれる<br>
+そのたいせつな存在のために<br>
+こわれた時計も気分もなおせるよ<br>
+あははって笑って修理は完了<br>
+パ!ビ!プ!ペガ! ってねがいごと<br>
+きっとホンキのおもいはとどく<br>
+いつでもしんじているよ キミだけの<br>
+ゆうきじるしのおうえんだん1号<br><br>
+パ!ピ!プ!ペガ!ってしんこきゅう<br>
+ほらちょっぴりゆうきがわくよ<br>
+あれこれ キミとだったらかなうかも<br>
+こわくないよ いっしょなら<br>
+パピプ!ペガ!ってあいことば<br>
+呼んでくれるだけではずむ<br>
+だれよりそばにいるよ キミだけの<br>
+おくびょうじるしのおうえんだん ハイ!<br>
+パピプ!ペガ!ってねがいごと<br>
+きっとホンキのおもいはとどく<br>
+いつでもしんじているよ キミだけの<br>
+ゆうきじるしのおうえんだん1号<br>
                     </p>
                 </div>
             </div>
